--- a/ansible/inventory/group_vars/kubernetes/os.yml
+++ b/ansible/inventory/group_vars/kubernetes/os.yml
@@ -25,7 +25,7 @@ ubuntu:
   packages:
     - hdparm
     - htop
-    - intel-gpu-tools
+    # - intel-gpu-tools
     - ipvsadm
     - lm-sensors
     - nano
