--- a/kubernetes/apps/kube-system/kustomization.yaml
+++ b/kubernetes/apps/kube-system/kustomization.yaml
@@ -2,6 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - ./intel-gpu-plugin/ks.yaml
   - ./namespace.yaml
   - ./kube-vip/ks.yaml
   - ./metrics-server/ks.yaml
