--- a/kubernetes/apps/default/emqx/app/helmrelease.yaml
+++ b/kubernetes/apps/default/emqx/app/helmrelease.yaml
@@ -34,14 +34,10 @@ spec:
           nginx.ingress.kubernetes.io/whitelist-source-range: |
             10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
         hosts:
-          - host: &host "emqx.${SECRET_DOMAIN}"
-            paths:
-              - path: /
-                pathType: Prefix
+          - &host "emqx.${SECRET_DOMAIN}"
         tls:
           - hosts:
               - *host
-            secretName: emqx-tls
     resources:
       limits:
         cpu: 500m
