--- a/ansible/inventory/host_vars/picluster-hd-1.sops.yml
+++ b/ansible/inventory/host_vars/picluster-hd-1.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:J/qfSJF2,iv:DtBdEkD2fuL3UczNA+3RlgW9ZmwcHDWmxNtJyNcP4X0=,tag:VpA9ESHDWE5C1KwiIWj2Sg==,type:str]
-ansible_user: ENC[AES256_GCM,data:Yfud/xUfwQ==,iv:r46Rw2oCOJvPH7+0seWF4jR2+dvAHre8XPvRyr9IXCw=,tag:VE5FnRYIatNv0rys+ZqeTA==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:9ohlMCVlUUk=,iv:f2b+p/+M0E1hjyZYfGAC87xeA3HKgmcNa17OExs0/AI=,tag:EqrRVTHpixOEuA9CTDj+7Q==,type:str]
+kind: ENC[AES256_GCM,data:/vGWhT2v,iv:M/ANb0wlSn6t0tYLDIHLeJVqewFXKhaI8TDWdaMJeEI=,tag:N0x0DDnUEOw8u/l11LzAcg==,type:str]
+ansible_user: ENC[AES256_GCM,data:m9IPsZSNSA==,iv:n78G5xK0au/Zabkj1Osdv4tWYoM/pTKNbi6kJcafNVo=,tag:vj6UBqgFr5f4Xcioz2wT5w==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:Hk1Lw8vq4+E=,iv:wr0GQtf2CXF07VhVMcMIYoHKeuMQQaeSLSKZrIAudo0=,tag:3+h9lnI8wog4tX5MMJxO1w==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1xfngu8m7w7epw797sdnjc746ysuksxevnucr9t4alq82hgzxdagq4u2y4p
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB1VWsvczhnL0djNkx3TmQz
-            NzJKbTlqZElxUTVxZGRFQ3lXVmZ3cnF0MHprCit1VzNBeGRGc2F4Z3FCU1Qxa1lk
-            NFcrT3JSMFptNk8yU1ZNZVdpM1RWS2MKLS0tIEhjTEZDd2dURGFoVkFxRVRkU3l0
-            WnZobTNLeXZHTzJIV01rMUZUN3p5TW8KViPnjY/z2fvZV+HU1ptQZo+AKqk+URJU
-            t2wGuNNRt3hTTREUOvHX7J0qaYc2IjMicrw0wweEP2SgXMtAbxA5ZQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBFZU9WdVg2c294VWNBTTJJ
+            SWMwYXRqNkZBNldSR3RtdHZqakdHZzEzSVFFCit6RmJobXBuR1dCWFd1bUhMdGg5
+            VnZDbk1oNWVoTlo1bTV5NjlkekxhencKLS0tIFR3NVR1VkQ5ZisyRmtPeEdpRVJG
+            c0txMlJMUXFNc3pKM0lmU2t4WjZ1cHcKxzpYX1YIVBIbB8I2dSnHD0jT1EaLYb/U
+            PEJAKTap43GaMSsSviXFiNmLZsjNf7ftz5y3sLGjhCMRI0lq4xXU1w==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-05T02:18:17Z"
-    mac: ENC[AES256_GCM,data:6CJmcsUiHgltJNHbqkLE2W2n2geUyKApPYvrmul9UwIChyXhJ+FrYpbVZ5T8Am1Zcs1gaeoOJMPrGQTBdkEQMvFpSzlqaNlLYshbjnmxLkoEKHc3EQ1U+5Jt7S22SGVshU63GtiktBblnVtYV6R3xTWkmfT10KOLErnneyZqa7A=,iv:eHqk/bUWhXibSqKE0O6dY0Hs1KpE70MqS0bBojjJqIM=,tag:8ClbmAxTW/2vJIWVkzPkfg==,type:str]
+    lastmodified: "2023-01-06T21:20:00Z"
+    mac: ENC[AES256_GCM,data:YAX97LkwCWvzE924s2mdnYcTwHMIhxHeuIGqF4G+UhtfDubXbo1A0WR1b270yiMnKwVVTZnxsxrumXxElT3IB9BP4avMmasGSaqtFIvq3IyPebp5Ife7aucL+s8mOAZkeVk/MSxYg9/+Wg5tq3teE9KfMGUZWb9jFq0CuJopPJw=,iv:VC6AM1Ht+/640dmhpQ7UA+aitlvgJdXbn5aV6GRXREc=,tag:3ft1JGRz2Gh6Z6rRhbeTow==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
