--- a/ansible/inventory/host_vars/picluster-hd-3.sops.yml
+++ b/ansible/inventory/host_vars/picluster-hd-3.sops.yml
@@ -1,6 +1,6 @@
-kind: ENC[AES256_GCM,data:emxhMTW1,iv:Lzj6H5468FMd0YnVV2Lk0nSc1wjpInvk5+ZVb4qY6/c=,tag:x4v01dJB51e5qd9RgVJlVg==,type:str]
-ansible_user: ENC[AES256_GCM,data:L5JKix6y3g==,iv:Kpsk8gMESnnyNkJ+SebISV6p86O9BlS8T705i7iFQE0=,tag:AGJCEbc61/+kgwoDFoPvYw==,type:str]
-ansible_become_pass: ENC[AES256_GCM,data:yoO3kE7ASRk=,iv:lrjnQE5uQfOTdUeG8kDjh2APZ2ARpVk5UIoJQJYJkwc=,tag:bBVbdQxmonvR9mz5q6jHOA==,type:str]
+kind: ENC[AES256_GCM,data:CORrwb62,iv:vC62i7Y+KwkN6So8GzBBSYGUtKhSSOEU8i3JZLNcL40=,tag:iY5oyTgXm5HebYV8zaE4PQ==,type:str]
+ansible_user: ENC[AES256_GCM,data:xIKWYI1whg==,iv:3ESOYVwFi/iWz+WSSApJbpQSWkuSX/AprPwY3PE7rEg=,tag:JrNm13J4fVYEYlCK0e5f4g==,type:str]
+ansible_become_pass: ENC[AES256_GCM,data:H7ihg8WWLIo=,iv:hzs3v5UWibD6HqPkFjtGLb0f9sTZRxYjC2aacvwqlu0=,tag:CQ0CSt41P+iSvv0zFGk8bQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -10,14 +10,14 @@ sops:
         - recipient: age1xfngu8m7w7epw797sdnjc746ysuksxevnucr9t4alq82hgzxdagq4u2y4p
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkeGsxU3VUWEZNMTZQd0RV
-            ZjZXbDExR1d5bzVobndaV1BNTTBESjZEOFdVCmEvQzNGNjBsTmwxQ2YrODFRSjJh
-            QzY3Wm5wRVJQVGtHUmE2bkQ1NFFxVTAKLS0tIFJUOTlmTEZSWUIwUW1jak1DY01O
-            dXJZSGhhMllsRE00WmkyYk1hdE41ZU0KbtsN5gbv863xKfeqMSVgQ91MeKWgt/Ca
-            sPCpQHwIwtwvieI3sc4EEBtGHm1JWx0oY9HHOYdqLDc8MAvzQdQZ0g==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBWaGMySzFZd2hyYzBCRU92
+            SThaTjFnY00zSXVDRWUxelpTWmdXcWcrWWlJCkQxMWkwd3A2UUN6aVc0Q0VVenRw
+            c0YzRzdsT2tpYTdKc05LL0tsbXB3Q1EKLS0tIDRxS1k2UUY4eitJSDRHUEZZc2lU
+            RllUTXlRK0lyQk1ETTVDTDBOUDIzbTQKV7vJdU9CoU+CDut2R19HUVfUdwdx8blx
+            LKtwHuh3dyz4tILfnp6yMkL5DfWkA/VdaVgCao5KeDlglrujnHshDQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-05T02:18:17Z"
-    mac: ENC[AES256_GCM,data:WTvozXSNBk8b8vyI/HvPGzmw+JHz9aCJKh/dZi7rU9ECc/y9YfwsekyKAjvng83oalqAWpycLuH9PAqe+X0bj5tXU8xCUlfhJYRJH/sB4k69maFrYD0kZy98BL5H+OJiQJOMxslD99nKsDfWQ8AAf3f8T9uxXz1DdHfXzFYwMIw=,iv:E2hInnCMkVxXt5mDcE6LAvaXCphfWJZ3F/fgVuwIY2k=,tag:S198GKkfBHkkrunfDgYYww==,type:str]
+    lastmodified: "2023-01-06T21:20:00Z"
+    mac: ENC[AES256_GCM,data:Y1duf9zhhLmvxJKbJCo6pA+DfP9RwdjemtEDjMmeQz8v2BMKqBRCz7OgGRCWzmwFSbCo9lOxw3kjwOBiIDkY6a8xCaZteiBz5eXFcYGqGdSHua4FZfDtsZJt7UjJ7efn9gt7ERPSG6Mlg4lMf4Gzg3UItHxky6eD4U5eqRdl5yo=,iv:o3ENeNLAGScEZn9QBCWFf6ZEciaACncQqD/10rzMgAw=,tag:AuQ5b5WRH+RvXpX6XJ91yw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.3
