--- a/ansible/inventory/hosts.yml
+++ b/ansible/inventory/hosts.yml
@@ -9,3 +9,7 @@ kubernetes:
           ansible_host: 10.0.8.223
         picluster-hd-3:
           ansible_host: 10.0.8.224
+    worker:
+      hosts:
+        picluster-hd-laptop:
+          ansible_host: 10.0.8.254
