--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,8 +4,8 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:8YxeIU2onQC+SFHmcczq,iv:V9b5UMc9xuSQ0aErrXOKXjVw1Xk4I+R+UPMqukd1i+Y=,tag:v7uz0Ddvrkanj2rTF/lW5w==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:ZvZ/rqE1Mjrjy0t6BHnTxg==,iv:4vXquzeatpB3eNteieX0vsuhcTBldYd5GFO5XlT68kE=,tag:rWLCuTT6JMxP7va2nbKCMA==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:MP6EG8y69yeyPlve6FQS,iv:Ej5ZFamylO8t88JMiQmSf8yjewiUS5mPoAZaY5Vv9m4=,tag:/VQatRE+bKr/vtdFFWY5tA==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:Z9CWDmYloN9SzCguajRCCg==,iv:1enSCwiFyramOUMexPTDM36dWk21iMMmlTK7XvEgbU8=,tag:hLMRXtcEfrxJpiPmnNZd1Q==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +15,14 @@ sops:
         - recipient: age1xfngu8m7w7epw797sdnjc746ysuksxevnucr9t4alq82hgzxdagq4u2y4p
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBwdjZUMVQxQ1JOWFdzWnhS
-            TTgxUkc2VUpxN2Q3eUJhZ1JKK0JVMThFUlF3CjZNQUU4OTZsWVh1cUU1bDVkQ25M
-            MHJsNGtScVJSVmxQdmNBZjJGTUtIcGsKLS0tIE9kWnhlbVZyZTVYMXVCZHZHbHV4
-            QXUxSjhZQ1h6Qnp6WFN6Q1Nld2ZNOG8KU0bX949RhwBVrl4eFUJCCELuwU1YY7XC
-            q+JJj188z0PJ3v8988PRDlhyrmDyuOzJ1rmyXRIX+5rs6IK0SpmgwQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBEL2s3VHVzQmtkdTBGSncx
+            R1NQOXhYZG1Hemd6UW50K28rTUN2NmZwNWprCk9yclpxeHdwVDloZEtnamNTYTBO
+            Tjh2MjJpQ3Bkems2WUZMTXYycHZwRVUKLS0tIDhGM1lRazc3R3FGNlF6a1NsbG1F
+            enhVU0FkdW82TU5iYi9vSHpRdEFyd3cK5nBvzI/NoBmMI89bSkkvUp+Uzp+MLKmn
+            wmC3rD49FKN8fzheLaLWkwh8FtUlfp4jSKGTIb+/t4eKo92Ht/8wkg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-05T02:18:17Z"
-    mac: ENC[AES256_GCM,data:sK3eLpCrV34QW9idNTAaoB111h7/aB6eTFwZKsX6sXmY8sBSZ9rsa0kyha27gI3jJBGTwUSVTtEmrSOR6YYYR7SITOCEr3IwoImVJLEkmPejB7A9eJR+ILv1FU4EuoZnP/PfFzaonmoMdN86KTpRrDNibXf/8IaDJkwFtfkMx14=,iv:2CA7Dok05Ey/wKBVy6S2NZ+g+tF4TcpUFgYllgKVMRk=,tag:wj9e7PhgojTpC9mcdR4l9A==,type:str]
+    lastmodified: "2023-01-06T21:19:59Z"
+    mac: ENC[AES256_GCM,data:qGofZmPieybxDadDUhJv3pjhZORtFBIFqm/PwZ35/bToK5UfKK/GESi9lbmBU0WqNgQDwBbwg8KrXvGkG7mljFr302wtok0hutsMWaSQ2Vt6WarvQvRetTvVF9lYB48MtaWxNsIkVqdkN/PI0Fns+a3xFR4ymLtNQ6seEYYgdgs=,iv:uiTK3espnZe4QEbVc4mcRf9CNR1gU4LmU4FHp+b/mRk=,tag:OvU5rJWXgjzPdSz1ba8abQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
