--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -7,5 +7,6 @@ resources:
   - ./emqx/ks.yaml
   - ./esphome/ks.yaml
   - ./hajimari/ks.yaml
+  - ./home-assistant/ks.yaml
   - ./jellyfin/ks.yaml
   - ./rtl433/ks.yaml
