--- a/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
@@ -12,7 +12,7 @@ spec:
       version: 13.4.2
       sourceRef:
         kind: HelmRepository
-        name: home-assistant
+        name: k8s-at-home
         namespace: flux-system
   install:
     createNamespace: true
