fixup! Fix the arrs (#35)

--- a/kubernetes/apps/default/lidarr/app/persistence.yaml
+++ b/kubernetes/apps/default/lidarr/app/persistence.yaml
@@ -21,7 +21,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: prowlarr-config
+  name: lidarr-config
   namespace: default
 spec:
   accessModes:
