--- a/kubernetes/apps/default/sonarr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/sonarr/app/helmrelease.yaml
@@ -60,7 +60,7 @@ spec:
       config:
         enabled: true
         type: pvc
-        existingClaim: radarr-config
+        existingClaim: sonarr-config
       media:
         enabled: true
         type: nfs
