--- a/kubernetes/apps/default/radarr/app/persistence.yaml
+++ b/kubernetes/apps/default/radarr/app/persistence.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: lidarr-config
+  name: radarr-config
 spec:
   capacity:
     storage: 5Gi
@@ -21,7 +21,7 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: prowlarr-config
+  name: radarr-config
   namespace: default
 spec:
   accessModes:
@@ -31,4 +31,4 @@ spec:
       storage: 5Gi
   storageClassName: ""
   volumeMode: Filesystem
-  volumeName: lidarr-config
+  volumeName: radarr-config
