--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
   - ./echo-server/ks.yaml
   - ./emqx/ks.yaml
   - ./esphome/ks.yaml
+  - ./frigate/ks.yaml
   - ./hajimari/ks.yaml
   - ./home-assistant/ks.yaml
   - ./jellyfin/ks.yaml
