--- a/kubernetes/apps/default/frigate/ks.yaml
+++ b/kubernetes/apps/default/frigate/ks.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
   name: cluster-apps-frigate
-  namespace: flux-system
+  namespace: flux
   labels:
     substitution.flux.home.arpa/enabled: "true"
 spec:
