feat(mariadb): add mariadb; note the todo

--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -11,6 +11,7 @@ resources:
   - ./home-assistant/ks.yaml
   - ./jellyfin/ks.yaml
   - ./lidarr/ks.yaml
+  - ./mariadb/ks.yaml
   - ./nzbget/ks.yaml
   - ./prowlarr/ks.yaml
   - ./radarr/ks.yaml
