--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -4,8 +4,31 @@ metadata:
     name: cluster-secrets
     namespace: flux-system
 stringData:
-    SECRET_DOMAIN: ENC[AES256_GCM,data:MP6EG8y69yeyPlve6FQS,iv:Ej5ZFamylO8t88JMiQmSf8yjewiUS5mPoAZaY5Vv9m4=,tag:/VQatRE+bKr/vtdFFWY5tA==,type:str]
-    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:Z9CWDmYloN9SzCguajRCCg==,iv:1enSCwiFyramOUMexPTDM36dWk21iMMmlTK7XvEgbU8=,tag:hLMRXtcEfrxJpiPmnNZd1Q==,type:str]
+    SECRET_DOMAIN: ENC[AES256_GCM,data:yPeVN2tQUTpjsd6699rK,iv:kM5hAsmX/6WlxjKYOBdvZOAw7cjpCBHs0++JJCSWoHw=,tag:W14cOhJJb7DazaCVswMLqA==,type:str]
+    SECRET_CLOUDFLARE_EMAIL: ENC[AES256_GCM,data:mWYE7ZiGtr6CZgZSXvP/eA==,iv:8fGkITaT6+sHyO2IL9ervxsIDByAbxkQJgxkFpaebFY=,tag:NAfTu7iHsp/d0bnOtMOyYg==,type:str]
+    GRAFANA_ADMIN_USER: ENC[AES256_GCM,data:4zZXUE+DiA==,iv:tzc0eAt53UbIGiRyD6OSUqnv+BYdYx2WEbXoHdLmN3A=,tag:+JZoqhSgQbQlXJWtonO0IA==,type:str]
+    GRAFANA_ADMIN_PASSWORD: ENC[AES256_GCM,data:gGrUIm+LGfbMtripD81ZE/UY7maViF8zOQ==,iv:Nb5bW6+2QwSwEb0Q9ztSqHYSPk/a1dVgrqEomQZ596Q=,tag:gDavjBU/ZvWkB5rfOhIq6w==,type:str]
+    SYNOLOGY_HOST: ENC[AES256_GCM,data:UgY3H9P6C/jVzA==,iv:wSX7ejAeUjXdoDbPrHXBH0qsWNukyNVf5isp+g9f9U0=,tag:4cq0wFw+pnky6ohVF+OhJg==,type:str]
+    SYNOLOGY_USER: ENC[AES256_GCM,data:JPJ7,iv:f+zTwwylBmb3k/hZ4ARvGVh4LsSfMKYID6BINnuPUH0=,tag:S1oRce7AsgLjzUUacSQdXQ==,type:str]
+    SYNOLOGY_PASSWORD: ENC[AES256_GCM,data:WF81W/IEDAKailBe5baQYx1NxzSPbGPfUg==,iv:+4Bt29KoEQr2sxL641dBWTzXd4Q0IbgKBQkjGhMNZSg=,tag:bg6YQnoNJQ90BQHQVQSw7Q==,type:str]
+    WORDPRESS_MARIADB_USERNAME: ENC[AES256_GCM,data:4TzO1DsWIsD0,iv:9x8CYsj0uKOU8/eH9z7qg6TOqJZCbwpwgsstyJiZKN4=,tag:RHlkG7+hHTd9lqUHBeh7LQ==,type:str]
+    WORDPRESS_MARIADB_PASSWORD: ENC[AES256_GCM,data:XxUX0N6cYiZ/ihJLFMrozA6J/Zw=,iv:yJfWa66rDRSV8INU7KYCHMblxBWUbJxOEvexev9pfbY=,tag:1hV8S98TOuWgU57yPDwS9A==,type:str]
+    WORDPRESS_PASSWORD: ENC[AES256_GCM,data:D2thmRw+PteCmMRHNMGnoTyc,iv:2jRI8yclcJrbmljEV03N5xy0LKqqgmYzzuOfC/pjydI=,tag:q+WbFtdO23cIeJnCd6kjRg==,type:str]
+    PROMETHEUS_HASS_TOKEN: ENC[AES256_GCM,data:drwE0XpkV4TMRlcis+wILt7Ez4R7o6jVE4qtnJBR6UuMMoUWgy8dCo1P5g==,iv:3GUDlWgeihNPr8QnFDBlyTgnTk66QRHjYNS2zwmpX6g=,tag:95DpqbvvvjG0F2uoBh1eFQ==,type:str]
+    GITLAB_RUNNER_TOKEN: ENC[AES256_GCM,data:yar69kMPflT+6DRHikkyKr+buPcV8F6QYnZZEA0=,iv:zEBkcQejM3n27CpCAzi0UBagAS/7ZOKGLh+tKGdRP7Y=,tag:8K4vaZQ3pCnApiwRH31qkw==,type:str]
+    TWILIO_PASSWORD: ENC[AES256_GCM,data:zzvt80tdRU8gx8whZxiv9+kK,iv:Wyjo1Mxjy1AJAdfLBG0+o8hV/AvAjdBW30PrUms65/E=,tag:2KujgX3zsy9pozGJr3MWiw==,type:str]
+    TWILIO_USER: ENC[AES256_GCM,data:SxyZxKus,iv:qNF1PAbD+bVJD+GxY8Pde+PVitmds3gqExPfY+yb5KQ=,tag:dlAxSPSHrf9fu77oYt2lPQ==,type:str]
+    VOIP_1001_PASSWORD: ENC[AES256_GCM,data:ae0CJ0YIHYQQmYgCdYlD,iv:mzK8WMPD6SXBV0gevzMc7tL0iUgiZCJ6kGSibQMNHEI=,tag:p30OJ3AvMvbnNj3ZYtEefA==,type:str]
+    VOIP_1002_PASSWORD: ENC[AES256_GCM,data:g9TAfJy50yXfmgnxGWXl,iv:X7DnBKDb6LR5Nt+NhnDnxCdt50RlZTg92lQeo4OXfzw=,tag:evJ/dIJSBdyxlDJErsziKA==,type:str]
+    VOIP_1003_PASSWORD: ENC[AES256_GCM,data:2WuVrtq1LI2fkb5di4Bt,iv:PfcThmKWjXRfc5K/VMd/gVMgPikisL3aGy6Trdknw2I=,tag:v4WEWh8q0uLzwDBm0GrKhg==,type:str]
+    VOIP_1004_PASSWORD: ENC[AES256_GCM,data:riKPQh971FwF/nnPaqJg,iv:QLNpWM9sZXwLWXpuraq60pZnKbkVkOikh/ZilrkznHw=,tag:sGDcsE+N6ekkxtCP1GYJ+w==,type:str]
+    MARIADB_MCNEIL_PASSWORD: ENC[AES256_GCM,data:CPT/bp4fPCJFR9tkSqtI1NIQMFo=,iv:puH1nbd1JRCQuxg17p6geAnyHK2HWO4DQpxONlvaXJs=,tag:8TEmHMNjGgc9BK+MJ2TWkw==,type:str]
+    MARIADB_ROOT_PASSWORD: ENC[AES256_GCM,data:QRuBugIjPaCwt7St5tmau4Lj98EAPw==,iv:1827ykoAqzijt4eEfHOEHGiBVKB8C5ZoanX8nlp7ecg=,tag:2u7woCKYHV4BX3PszvQZFg==,type:str]
+    FIREFLY_MARIADB_USERNAME: ENC[AES256_GCM,data:qAvWEfzcgw==,iv:Lgj2/Dk2iDTkb57wa9I/pMofuAa0NMCBeisLFhgBbko=,tag:wHEVmfkbMXq2I9y/MRajMQ==,type:str]
+    FIREFLY_MARIADB_PASSWORD: ENC[AES256_GCM,data:FyBgJe2sEIFUgzNmrkh/xpAcLRE=,iv:cYucfuojaJgsYc7bt59MY+B9dmryH0PKX3f0Rzu1JGk=,tag:kwWmAkXQwHrq5ymKO5lY5Q==,type:str]
+    FIREFLY_KEY: ENC[AES256_GCM,data:BZ6lUnIt7EswGlNsV59VK4TXdusKwdX4fAjmpmb5tHI=,iv:C1xBmL1uD72mEC7tEFq5Ide5XrnOqEGmbUFEvpiwk+A=,tag:bxXq2yeZFiTPNVps/+9o+w==,type:str]
+    HOME_ASSISTANT_MARIADB_USERNAME: ENC[AES256_GCM,data:Ff4zTQ==,iv:KArta2o1LbA0tT3PxH7TcdlvKKY7Q+Cd1md3ZSUff6I=,tag:5oFaoyxYKDP7lEQQSEXNAQ==,type:str]
+    HOME_ASSISTANT_MARIADB_PASSWORD: ENC[AES256_GCM,data:k3+58T6dYROjfFW+Kj/wqfnRqaA=,iv:JWQibKtfUFw6c2rAtYkGPEWvc1J6LcUOWn+PfNYNNRk=,tag:n582Aeslb9Zlx0fCk6B8iA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -15,14 +38,14 @@ sops:
         - recipient: age1xfngu8m7w7epw797sdnjc746ysuksxevnucr9t4alq82hgzxdagq4u2y4p
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBEL2s3VHVzQmtkdTBGSncx
-            R1NQOXhYZG1Hemd6UW50K28rTUN2NmZwNWprCk9yclpxeHdwVDloZEtnamNTYTBO
-            Tjh2MjJpQ3Bkems2WUZMTXYycHZwRVUKLS0tIDhGM1lRazc3R3FGNlF6a1NsbG1F
-            enhVU0FkdW82TU5iYi9vSHpRdEFyd3cK5nBvzI/NoBmMI89bSkkvUp+Uzp+MLKmn
-            wmC3rD49FKN8fzheLaLWkwh8FtUlfp4jSKGTIb+/t4eKo92Ht/8wkg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBQMXlUWTFvUS9zWkVlZ1Ns
+            STRjNmlvY3ExYS9ZVzZtbzJ0UjJVQUkxSmhVCjA4LzMxT2pkNHA4SkQ4K0tpZGls
+            M3l3WEZ4Z0NoMjM1RHRPb0tLVVZwYWcKLS0tIFVPUGowczMvd3JwMmFuOVI2M1FC
+            SVN3ZnZxTFhTZVJXUTB6M0FIbDBjdGMK1Sp6cIpRs5Cchn9GyZv1SvlMrH/kCM+S
+            C6BCsa0o9aHuZ20U7dBjq1wLD+WW/t4K/Aoap72iReiNneuvr7zMkQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-06T21:19:59Z"
-    mac: ENC[AES256_GCM,data:qGofZmPieybxDadDUhJv3pjhZORtFBIFqm/PwZ35/bToK5UfKK/GESi9lbmBU0WqNgQDwBbwg8KrXvGkG7mljFr302wtok0hutsMWaSQ2Vt6WarvQvRetTvVF9lYB48MtaWxNsIkVqdkN/PI0Fns+a3xFR4ymLtNQ6seEYYgdgs=,iv:uiTK3espnZe4QEbVc4mcRf9CNR1gU4LmU4FHp+b/mRk=,tag:OvU5rJWXgjzPdSz1ba8abQ==,type:str]
+    lastmodified: "2023-01-10T02:56:45Z"
+    mac: ENC[AES256_GCM,data:rJAUrF8cPAAM1pUfsC5DTiFezBLY791qCxnw6us3y85/FlWEJFovhOqkWNxzePGycMYTpO7sU7UM31NXxXfFf3cVOOMiSaxQrelvo7w+jZQlzdHEqfawTA7je/J1SXpONnBz9u7cRAgZl+R41gsPK9cIMYDSrJNFTH2TbPAnO98=,iv:hYfuJawjoYeCZ7Bn0ObsYnupZo3Aa4wUbZ4O53NFxOI=,tag:cbW5kfc9yWYLw+bumYOYAQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
