--- a/kubernetes/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/repositories/helm/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - ./blakeblackshear.yaml
   - ./external-dns.yaml
   - ./emqx.yaml
+  - ./firefly-iii.yaml
   - ./hajimari.yaml
   - ./ingress-nginx.yaml
   - ./jetstack.yaml
