--- a/kubernetes/apps/default/firefly/ks.yaml
+++ b/kubernetes/apps/default/firefly/ks.yaml
@@ -2,12 +2,12 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: cluster-apps-hajimari
+  name: cluster-apps-firefly
   namespace: flux-system
   labels:
     substitution.flux.home.arpa/enabled: "true"
 spec:
-  path: ./kubernetes/apps/default/hajimari/app
+  path: ./kubernetes/apps/default/firefly/app
   prune: true
   sourceRef:
     kind: GitRepository
@@ -15,7 +15,7 @@ spec:
   healthChecks:
     - apiVersion: helm.toolkit.fluxcd.io/v2beta1
       kind: HelmRelease
-      name: hajimari
+      name: firefly
       namespace: default
   interval: 30m
   retryInterval: 1m
