--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -4,8 +4,11 @@ kind: Kustomization
 resources:
   - ./namespace.yaml
   - ./echo-server/ks.yaml
+  - ./emqx/ks.yaml
+  - ./esphome/ks.yaml
   - ./firefly/ks.yaml
   - ./hajimari/ks.yaml
+  - ./home-assistant/ks.yaml
   - ./jellyfin/ks.yaml
   - ./lidarr/ks.yaml
   - ./mariadb/ks.yaml
