--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -12,13 +12,13 @@
     "github>onedr0p/flux-cluster-template//.github/renovate/commitMessage.json5",
     "github>onedr0p/flux-cluster-template//.github/renovate/labels.json5",
     "github>onedr0p/flux-cluster-template//.github/renovate/semanticCommits.json5",
-    "helpers:pinGitHubActionDigests"
+    "helpers:pinGitHubActionDigests",
+    "schedule:daily"
   ],
   "dependencyDashboard": true,
   "dependencyDashboardTitle": "Renovate Dashboard 🤖",
   "suppressNotifications": ["prIgnoreNotification"],
   "rebaseWhen": "conflicted",
-  "schedule": ["every saturday"],
   "pre-commit": {
     "enabled": true
   },
