Add ocis, no persistence yet, just testing

--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -29,6 +29,13 @@ stringData:
     FIREFLY_KEY: ENC[AES256_GCM,data:BZ6lUnIt7EswGlNsV59VK4TXdusKwdX4fAjmpmb5tHI=,iv:C1xBmL1uD72mEC7tEFq5Ide5XrnOqEGmbUFEvpiwk+A=,tag:bxXq2yeZFiTPNVps/+9o+w==,type:str]
     HOME_ASSISTANT_MARIADB_USERNAME: ENC[AES256_GCM,data:Ff4zTQ==,iv:KArta2o1LbA0tT3PxH7TcdlvKKY7Q+Cd1md3ZSUff6I=,tag:5oFaoyxYKDP7lEQQSEXNAQ==,type:str]
     HOME_ASSISTANT_MARIADB_PASSWORD: ENC[AES256_GCM,data:k3+58T6dYROjfFW+Kj/wqfnRqaA=,iv:JWQibKtfUFw6c2rAtYkGPEWvc1J6LcUOWn+PfNYNNRk=,tag:n582Aeslb9Zlx0fCk6B8iA==,type:str]
+    OCIS_THUMBNAILS_TRANSFER_SECRET: ENC[AES256_GCM,data:+djDZdZlNwh3AQCWqSkUSjbEsIV54e3dLnUdEf8McPlyrY3/PV0oEY39UMeo22i+bu+EmqAb04881zrrJRFQEv/vbL8=,iv:oSLtI7bVGFR14CBVT3N1if++yr9Hv15SIGvqhhKAjL0=,tag:7GEI3NWCVrxLOUCWQOSDhQ==,type:str]
+    OCIS_TRANSFER_SECRET: ENC[AES256_GCM,data:s+puAzMVsiS8cAV76WQnsalutg/h7mAMQpVSAlENIuAwR5AUO9QrWYCoyAyL3elbVXjYsrUr+7gPN0npgOrL5YyO5n0=,iv:S/RHWo4WL92DXCADsWOfmI4mwGpVMu+c3u+f6BRYR2Q=,tag:wC8XCjaTuZjmA1GI3yJp0g==,type:str]
+    OCIS_STORAGE_SYSTEM_JWT_SECRET: ENC[AES256_GCM,data:RP28JDDkmK5p/3T8sogADsRmS6Ehh+RY3BOKkPM7KUKHuv5VYwHtok4aKjDSqSkagytbEPKyDPRFmuN8mtJfHHmSPi0=,iv:K5otciuNyYW3pVJ83XBGAWBG2QDAKqg05Rm8ALQxECY=,tag:Xvt5YFxJOKUxAYRP416GPA==,type:str]
+    OCIS_STORAGE_SYSTEM_API_KEY: ENC[AES256_GCM,data:GQCFCKmtVJRZoLXonN/JBKNvHtI1RaM23kWKb0cLPWA2hOpcl8DegPkjoqVoalTtJJaj6qjB0OizjfWJ9wukFonkD4Y=,iv:jxYeAjQ2e5kCELUM0OfMw1VNvbD4WGOmK8UpF752Vt8=,tag:HO1vcaKhuGjh0QGRdA9NsQ==,type:str]
+    OCIS_STORAGE_SYSTEM_USER_ID: ENC[AES256_GCM,data:gGmWnz7FKyr7jGokulR7+gy1WSWdGNw4bwSMsSl5qHYjl6cK6/J5p1FHiAk3erH9MDNkMqlYOa6r6nDMMZDGJT4PAV8=,iv:cQLrZ1JJOqbvRWNUkoYVGRvpCwXpgDsb2KpmO5Yx9Iw=,tag:v1K5XqeyUE9hQYluHFRIPg==,type:str]
+    OCIS_MACHINE_AUTH_API_KEY: ENC[AES256_GCM,data:M0B6943iGE/PYjT6RhJv+5t1yRacjfXJMl7+mSEiZXQr9MvBCIThuXapUPtRxiNidIKay5vjHUgYv55+Q8ViDV6uiZU=,iv:858D7GVo79xIsiuRr5HCOf2XhC5tGS+uvh/2GNpntA8=,tag:Ym0wS2M2ZG7KMF8H30KEsQ==,type:str]
+    OCIS_JWT_SECRET: ENC[AES256_GCM,data:TvPe50HQnM7trYYaYGfa4sHJDK94xj3cCJZooZ220Ja/JKncD82mUuZ8EmxvZFgoWvDIFkViE+oTypsuYAHkFlEAlKI=,iv:dk+35W5bHmvvFr2NoJpLnWcgLugKKDKSkaAQzddxSZc=,tag:1Z2iSGBpjDAZUgRhDoLnlQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -44,8 +51,8 @@ sops:
             SVN3ZnZxTFhTZVJXUTB6M0FIbDBjdGMK1Sp6cIpRs5Cchn9GyZv1SvlMrH/kCM+S
             C6BCsa0o9aHuZ20U7dBjq1wLD+WW/t4K/Aoap72iReiNneuvr7zMkQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-01-10T02:56:45Z"
-    mac: ENC[AES256_GCM,data:rJAUrF8cPAAM1pUfsC5DTiFezBLY791qCxnw6us3y85/FlWEJFovhOqkWNxzePGycMYTpO7sU7UM31NXxXfFf3cVOOMiSaxQrelvo7w+jZQlzdHEqfawTA7je/J1SXpONnBz9u7cRAgZl+R41gsPK9cIMYDSrJNFTH2TbPAnO98=,iv:hYfuJawjoYeCZ7Bn0ObsYnupZo3Aa4wUbZ4O53NFxOI=,tag:cbW5kfc9yWYLw+bumYOYAQ==,type:str]
+    lastmodified: "2023-04-01T19:12:12Z"
+    mac: ENC[AES256_GCM,data:LfpQ5XLjlqlEw/XhQOa+onoZYQ2kO3h5gD2QXT9NMCGjiGlvkjZgU9T402a4BM44v6CCAvGpzxbZUs9DgtEJYvtH5mK3w2pg6U9czWvclkloxzdxzdxFwcF0WesCxBka1H40Lw6e7usfpc89FsNGMU/cxyCnbrPXu0Yb6fPxioA=,iv:cZA9kCEfLlYU0C59LErADAg2LAeJGw7HObJz4oY23TM=,tag:Z4Ke0ND3nZnEE3afw3KNBw==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.7.3
